<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">crGoBang</string>
<string name="black">Black</string>

<string name="white">White</string>
<string name="xianhoushou">Select Color</string>
<string name="easy">1</string>
<string name="medium">2</string>
<string name="littlehard">3</string>
<string name="hard">4</string>
<string name="impossible">5</string>
<string name="difficulty">Level</string>

<string name="strategy">Strategy</string>
<string name="attack">Attack</string>
<string name="defend">Defense</string>
<string name="adbalance">Balance</string>
<string name="jinshou">Forbidden</string>
<string name="checksansan">Double 3</string>
<string name="checksisi">Double 4</string>
<string name="checkchanglian">Long</string>
<string name="voiceswitch">Background Music</string>
<string name="voiceon">On</string>
<string name="voiceoff">Off</string>
<string name="soundeffects">Sound Effect</string>
<string name="soundon">On</string>
<string name="soundoff">Off</string>
<color name="testcolor1">#ff0000</color>
<color name="testcolor2">#ff0000</color>
<color name="testcolor3">#ff0000</color>
<color name="testcolor4">#ff0000</color>
<color name="testcolor5">#0000ff</color>
<string name="ok">OK</string>
<string name="whattodowhenhitboard">When Clicking Board</string>
<string name="movefocusonly">Move Cursor Only</string>
<string name="movefocusandluozi">Move Cursor And Put On Board</string>

<string name="fmtGameName">游戏名：%s\n</string>
<string name="fmtVersion">版本号：%s\n</string>
<string name="fmtReleaser">发行商：%s\n</string>
<string name="fmtDeveloper">开发商：%s\n</string>
<string name="fmtPhone">客服电话：%s\n</string>
<string name="fmtEmail">客服email：%s\n</string>

<string name="Releaser">上海第九城市信息技术有限公司</string>
<string name="Developer">陈剑</string>
<string name="Phone">021-51729118</string>
<string name="Email">service@m.the9.com</string>
    
<string name="fmtAuthor">作者：%s\n</string>
<string name="fmtAuthorEmail">电邮：%s\n</string>
<string name="fmtCopyrightPeriod">版权所有    %s\n</string>
<string name="fmtLicense">本游戏遵循%s License\n</string>

<string name="Author">陈剑</string>

</resources>
